Added dependency to example project

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -9,3 +9,13 @@ buildscript {
 }
 
 apply plugin: 'download-dependencies'
+apply plugin: 'java'
+
+repositories {
+    mavenLocal()
+    mavenCentral()
+}
+
+dependencies {
+    testCompile 'org.testng:testng:6.9.4'
+}
