Changed plugin id from 'download-dependencies' to 'net.idlestate.download-dependencies'

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -8,7 +8,7 @@ buildscript {
     }
 }
 
-apply plugin: 'download-dependencies'
+apply plugin: 'net.idlestate.download-dependencies'
 apply plugin: 'java'
 
 repositories {
