--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,19 @@ archivesBaseName = 'gradle-download-dependencies-plugin'
 // Please comply with the rules of Semantic Versioning (http://semver.org) and tag releases.
 version = '1.0.0'
 
+task sourceJar( type: Jar ) {
+    from sourceSets.main.allGroovy
+}
+
 publishing {
     publications {
         mavenJava( MavenPublication ) {
             artifactId archivesBaseName
             from components.java
+
+            artifact sourceJar {
+                classifier 'sources'
+            }
 
             pom.withXml {
                 asNode().children().last() + {
