--- a/build.gradle
+++ b/build.gradle
@@ -29,24 +29,6 @@ archivesBaseName = 'gradle-download-dependencies-plugin'
 // Please comply with the rules of Semantic Versioning (http://semver.org) and tag releases.
 version = '1.0.0'
 
-bintray {
-    // Define in ~/.gradle/gradle.properties or as project property on startup
-    user = bintray_user
-    key = bintray_api_key
-
-    publications = [ 'gradlePlugin' ]
-
-    pkg {
-        repo = 'maven'
-        name = archivesBaseName
-        licenses = [ 'Apache-2.0' ]
-        vcsUrl = 'https://github.com/tehlers/gradle-download-dependencies-plugin.git'
-        version {
-            name = version
-        }
-    }
-}
-
 task sourceJar( type: Jar ) {
     from sourceSets.main.allGroovy
 }
@@ -74,6 +56,24 @@ publishing {
                     }
                 }
             }
+        }
+    }
+}
+
+bintray {
+    // Define in ~/.gradle/gradle.properties or as project property on startup
+    user = bintray_user
+    key = bintray_api_key
+
+    publications = [ 'gradlePlugin' ]
+
+    pkg {
+        repo = 'maven'
+        name = archivesBaseName
+        licenses = [ 'Apache-2.0' ]
+        vcsUrl = 'https://github.com/tehlers/gradle-download-dependencies-plugin.git'
+        version {
+            name = project.version
         }
     }
 }
