Added download of parent poms that are missing in local repositories
For unknown reasons parent poms are only resolvable from local
repositories. If they are missing in local repositories, they are
therefore downloaded by constructing urls with the definied
repositories.

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         mavenLocal()
+        jcenter()
     }
 
     dependencies {
@@ -13,9 +14,11 @@ apply plugin: 'java'
 
 repositories {
     mavenLocal()
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
     testCompile 'org.testng:testng:6.9.4'
+    testCompile 'commons-beanutils:commons-beanutils:1.8.3'
+    testCompile 'commons-codec:commons-codec:1.10'
 }
