--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ repositories {
 
 dependencies {
     compile localGroovy()
+    compile 'com.google.guava:guava:12.0'
 }
 
 group = 'net.idlestate'
