--- a/example/build.gradle
+++ b/example/build.gradle
@@ -18,7 +18,6 @@ repositories {
 }
 
 dependencies {
-    testCompile 'org.testng:testng:6.9.4'
-    testCompile 'commons-beanutils:commons-beanutils:1.8.3'
-    testCompile 'commons-codec:commons-codec:1.10'
+    compile 'org.slf4j:slf4j-api:1.7.21'
+    compile 'org.slf4j:slf4j-log4j12:1.7.21'
 }
