--- a/example/build.gradle
+++ b/example/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    compile 'org.codehaus.plexus:plexus-containers:1.0.3'
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile 'org.slf4j:slf4j-log4j12:1.7.21'
 }
