--- a/example/build.gradle
+++ b/example/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     repositories {
-        jcenter()
+        maven {
+            url 'gradle/repository'
+        }
     }
 
     dependencies {
